# insto

./: README.md  pyproject.toml
src/insto/: __main__.py  cli.py  utils.py
src/insto/commands/: __init__.py  core.py
src/insto/commands/login/: __init__.py  handler.py  login.py  login_handler.py
src/insto/commands/me/: __init__.py  handler.py
src/insto/logger/: logger.py
