[project]
name = "insto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "instagrapi>=2.18.8",
    "pyfiglet>=1.0.4",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[project.scripts]
insto = "insto.cli:run_app"

[tool.uv]
package = true
